Apply leave dropdown

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\TT089\AppData\Local\Temp\testng-eclipse-212275344\testng-customsuite.xml</span>
+                    <span>C:\Users\TT089\AppData\Local\Temp\testng-eclipse--1902087733\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -147,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\TT089\AppData\Local\Temp\testng-eclipse-212275344\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\TT089\AppData\Local\Temp\testng-eclipse--1902087733\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -200,11 +200,11 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'mainexecution')
 data.setCell(0, 2, 'com.testexecution.Runcls')
-data.setCell(0, 3, 6068);
+data.setCell(0, 3, 6345);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'leave')
 data.setCell(1, 2, 'com.testexecution.Runcls')
-data.setCell(1, 3, 5027);
+data.setCell(1, 3, 5296);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -237,24 +237,24 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.testexecution.Runcls</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
-                <span class="method-name">loadclass</span>
+                <span class="method-name">extentsreporsample</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">mainexecution</span>
-                <span class="method-start">161 ms</span>
+                <span class="method-start">147 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">capturescreesn([TestResult name=mainexecution status=SUCCESS method=Runcls.mainexecution()[pri:0, instance:com.test...)</span>
-                <span class="method-start">6231 ms</span>
+                <span class="method-name">capturescreen([TestResult name=mainexecution status=SUCCESS method=Runcls.mainexecution()[pri:0, instance:com.test...)</span>
+                <span class="method-start">6494 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">leave</span>
-                <span class="method-start">6791 ms</span>
+                <span class="method-start">7029 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">capturescreesn([TestResult name=leave status=SUCCESS method=Runcls.leave()[pri:1, instance:com.testexecution.Runcls...)</span>
-                <span class="method-start">11819 ms</span>
+                <span class="method-name">capturescreen([TestResult name=leave status=SUCCESS method=Runcls.leave()[pri:1, instance:com.testexecution.Runcls...)</span>
+                <span class="method-start">12327 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
