--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,7 +1,7 @@
-<h2>Reporter output</h2><table><tr><td>Test Is start for every method</td></tr>
-<tr><td>All methods report is captured</td></tr>
-<tr><td>Attach screensshots to html report</td></tr>
-<tr><td>Executuion Is Done</td></tr>
-<tr><td>Attach screensshots to html report</td></tr>
-<tr><td>Executuion Is Done</td></tr>
+<h2>Reporter output</h2><table><tr><td>Test is started</td></tr>
+<tr><td>all methods are executed</td></tr>
+<tr><td>Attaching screens to report</td></tr>
+<tr><td>Execution is done</td></tr>
+<tr><td>Attaching screens to report</td></tr>
+<tr><td>Execution is done</td></tr>
 </table>
