--- a/Reports/Rep05_09_2019_08_47_31.html
+++ b/Reports/Rep05_09_2019_08_47_31.html
@@ -44,7 +44,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>May 4, 2019 11:09:30 AM</span>
+			<span class='label blue darken-3 suite-start-time'>May 9, 2019 08:47:31 AM</span>
 			</a>
 		</ul>
 	</div>
@@ -102,7 +102,7 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> test(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>2</span> test(s) passed</span>
                 </div>
                 <div class='block text-small'>
                     <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
@@ -125,15 +125,15 @@
 			<ul id='test-collection' class='test-collection'>
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>login crm</span>
-						<span class='test-time'>May 4, 2019 11:09:31 AM</span>
+						<span class='test-name'>Login Hrm</span>
+						<span class='test-time'>May 9, 2019 08:47:31 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>May 4, 2019 11:09:31 AM</span>
-	<span class='label end-time'>May 4, 2019 11:09:44 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 13s+356ms</span>
+	<span class='label start-time'>May 9, 2019 08:47:31 AM</span>
+	<span class='label end-time'>May 9, 2019 08:47:40 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 8s+325ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -145,25 +145,44 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr class='log' status='info'>
-				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-				<td class='timestamp'>11:09:36 AM</td>
-				<td class='step-details'>
-						From Base Execution
-					
-				</td>
-			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>11:09:39 AM</td>
+				<td class='timestamp'>8:47:40 AM</td>
 				<td class='step-details'>
-						Test Success
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='E:\Dp\MBS_PROJECT\Screenshot\Scrns\HRM_05_04_2019_11_09_38.png' src='E:\Dp\MBS_PROJECT\Screenshot\Scrns\HRM_05_04_2019_11_09_38.png' data-src='E:\Dp\MBS_PROJECT\Screenshot\Scrns\HRM_05_04_2019_11_09_38.png'>
+						Test Is success
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='E:\Dp\MBS_PROJECT\Screenshot\Scrns\HRM_05_09_2019_08_47_39.png' src='E:\Dp\MBS_PROJECT\Screenshot\Scrns\HRM_05_09_2019_08_47_39.png' data-src='E:\Dp\MBS_PROJECT\Screenshot\Scrns\HRM_05_09_2019_08_47_39.png'>
 				</td>
 			</tr>
+		</tbody>
+	</table>
+</div>
+					</div>
+				</li>
+				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
+					<div class='test-heading'>
+						<span class='test-name'>Apply Leave</span>
+						<span class='test-time'>May 9, 2019 08:47:40 AM</span>
+						<span class='test-status right pass'>pass</span>
+					</div>
+					<div class='test-content hide'>
+<div class='test-time-info'>
+	<span class='label start-time'>May 9, 2019 08:47:40 AM</span>
+	<span class='label end-time'>May 9, 2019 08:47:45 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 5s+472ms</span>
+</div>
+<div class='test-steps'>
+	<table class='bordered table-results'>
+		<thead>
+			<tr>
+				<th>Status</th>
+				<th>Timestamp</th>
+				<th>Details</th>
+			</tr>
+		</thead>
+		<tbody>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>11:09:44 AM</td>
+				<td class='timestamp'>8:47:45 AM</td>
 				<td class='step-details'>
 						Successfully executed
 					
@@ -171,10 +190,10 @@
 			</tr>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>11:09:44 AM</td>
+				<td class='timestamp'>8:47:45 AM</td>
 				<td class='step-details'>
-						Test Success
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='E:\Dp\MBS_PROJECT\Screenshot\Scrns\HRM_05_04_2019_11_09_44.png' src='E:\Dp\MBS_PROJECT\Screenshot\Scrns\HRM_05_04_2019_11_09_44.png' data-src='E:\Dp\MBS_PROJECT\Screenshot\Scrns\HRM_05_04_2019_11_09_44.png'>
+						Test Is success
+					<img class='r-img' onerror='this.style.display="none"' data-featherlight='E:\Dp\MBS_PROJECT\Screenshot\Scrns\HRM_05_09_2019_08_47_45.png' src='E:\Dp\MBS_PROJECT\Screenshot\Scrns\HRM_05_09_2019_08_47_45.png' data-src='E:\Dp\MBS_PROJECT\Screenshot\Scrns\HRM_05_09_2019_08_47_45.png'>
 				</td>
 			</tr>
 		</tbody>
@@ -210,7 +229,7 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Tests
-					<div class='panel-lead'>1</div>
+					<div class='panel-lead'>2</div>
 				</div>
 			</div>
 			<div class='col s2'>
@@ -222,19 +241,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>May 4, 2019 11:09:30 AM</div>
+					<div class='panel-lead'>May 9, 2019 08:47:31 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>May 4, 2019 11:09:44 AM</div>
+			 		<div class='panel-lead'>May 9, 2019 08:47:45 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 13s+464ms</div>
+					<div class='panel-lead'>0h 0m 14s+282ms</div>
 				</div>
 			</div>
 		</div>
@@ -245,8 +264,8 @@
 		<!-- container -->
 		<script>
 			var statusGroup = {
-                parentCount: 1,
-				passParent: 1,
+                parentCount: 2,
+				passParent: 2,
 				failParent: 0,
 				fatalParent: 0,
 				errorParent: 0,
@@ -277,7 +296,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "login crm":13.356
+			        "Login Hrm":8.325,"Apply Leave":5.472
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
