--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97b678">  <td>19/05/04 11:21:44</td>   <td>0</td> <td title="&gt;&gt;WebCommanmethods.loadclass()[pri:0, instance:com.testexecution.Runcls@685cb137]">&gt;&gt;loadclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/05/04 11:21:44</td>   <td>157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runcls.mainexecution()[pri:0, instance:com.testexecution.Runcls@685cb137]">mainexecution</td> 
-  <td>main@517210187</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>19/05/04 11:21:50</td>   <td>6229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WebCommanmethods.capturescreesn(org.testng.ITestResult)[pri:0, instance:com.testexecution.Runcls@685cb137]">&lt;&lt;capturescreesn</td> 
-<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>19/05/04 11:21:50</td>   <td>6787</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runcls.leave()[pri:1, instance:com.testexecution.Runcls@685cb137]">leave</td> 
-  <td>main@517210187</td>   <td></td> </tr>
-<tr bgcolor="97b678">  <td>19/05/04 11:21:55</td>   <td>11815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WebCommanmethods.capturescreesn(org.testng.ITestResult)[pri:0, instance:com.testexecution.Runcls@685cb137]">&lt;&lt;capturescreesn</td> 
-<td>&nbsp;</td>  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>19/05/12 16:38:41</td>   <td>0</td> <td title="&gt;&gt;WebCommanmethods.extentsreporsample()[pri:0, instance:com.testexecution.Runcls@6093dd95]">&gt;&gt;extentsreporsample</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1776957250</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/05/12 16:38:42</td>   <td>142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runcls.mainexecution()[pri:0, instance:com.testexecution.Runcls@6093dd95]">mainexecution</td> 
+  <td>main@1776957250</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>19/05/12 16:38:48</td>   <td>6491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WebCommanmethods.capturescreen(org.testng.ITestResult)[pri:0, instance:com.testexecution.Runcls@6093dd95]">&lt;&lt;capturescreen</td> 
+<td>&nbsp;</td>  <td>main@1776957250</td>   <td></td> </tr>
+<tr bgcolor="afa0ac">  <td>19/05/12 16:38:48</td>   <td>7024</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Runcls.leave()[pri:1, instance:com.testexecution.Runcls@6093dd95]">leave</td> 
+  <td>main@1776957250</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>19/05/12 16:38:54</td>   <td>12322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WebCommanmethods.capturescreen(org.testng.ITestResult)[pri:0, instance:com.testexecution.Runcls@6093dd95]">&lt;&lt;capturescreen</td> 
+<td>&nbsp;</td>  <td>main@1776957250</td>   <td></td> </tr>
 </table>
